# vibeSpatial

./: .gitignore  .health-baseline.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: .review-completed  settings.json
.claude/agents/: Explore.md  acceleration-angel.md  cuda-engineer.md  gpu-code-reviewer.md  impact-analyzer.md  maintainability-reviewer.md  performance-reviewer.md  pre-land-reviewer.md  python-engineer.md  zero-copy-reviewer.md
.claude/commands/: maintainability-enforcer.md  performance-analysis.md  zero-copy-enforcer.md
.claude/hooks/: file-guard.sh  pre-land-gate.sh
.codex/agents/: cuda-engineer.toml  python-engineer.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: docs.yml  pipeline-benchmarks.yml  publish.yml  release.yml  test-harness.yml
benchmarks/: bench_point_bounds.py
benchmarks/shootout/: _data.py  accessibility_redevelopment.py  corridor_flood_priority.py  emergency_response_catchments.py  flood_exposure.py  habitat_corridor_compliance.py  insurance_flood_screening.py  nearby_buildings.py  network_service_area.py  parcel_zoning.py  redevelopment_screening.py  retail_trade_area_screening.py  site_suitability.py  transit_service_gap.py  vegetation_corridor.py
docs/: conf.py  doc_headers.json  index.md
docs/architecture/: adaptive-runtime.md  api-dispatch.md  binary-predicates.md  clip-fast-paths.md  crossover.md  determinism.md  dissolve.md  fallbacks.md  fusion.md  geometry-buffers.md  gpu-kernel-caching.md  index.md  io-acceleration.md  io-arrow.md  io-files.md  io-support-matrix.md  make-valid.md  mixed-geometries.md  nulls.md  overlay-reconstruction.md  point-predicates.md  precision.md  pylibcudf-capabilities.md  residency.md  robustness.md  runtime.md  segment-primitives.md  spatial-joins.md  stroke-kernels.md
docs/decisions/: 0001-mixed-geometries.md  0002-dual-precision-dispatch.md  0003-null-empty-geometry-contract.md  0004-robustness-strategy.md  0005-device-residency-policy.md  0006-dispatch-crossover-policy.md  0007-probe-first-adaptive-runtime.md  0008-owned-geometry-buffer-schema.md  0009-fusion-strategy.md  0010-point-predicate-pipeline.md  0011-binary-predicate-refine-pipeline.md  0012-spatial-query-assembly.md  0013-explicit-fallback-events.md  0014-segment-intersection-primitives.md  0015-rectangle-clip-fast-path.md  0016-overlay-reconstruction-plan.md  0017-dissolve-grouped-union-pipeline.md  0018-stroke-kernel-seam.md  0019-compact-invalid-row-make-valid.md  0020-public-api-dispatch-boundary.md  0021-io-support-matrix.md  0022-geoarrow-geoparquet-bridges.md  0023-hybrid-file-format-adapters.md  0024-staged-gpu-native-io-execution.md  0025-zero-copy-geoarrow-adoption.md  0026-geoparquet-scan-engine.md  0027-family-specialized-geoarrow-codecs.md  0028-staged-wkb-bridge.md  0029-staged-geojson-ingest.md  0030-batch-first-shapefile-ingest.md  0031-determinism-and-reproducibility.md  0032-point-in-polygon-gpu-utilization-diagnosis.md  0033-gpu-primitive-dispatch-rules.md  0034-cccl-precompile-warmup-strategy.md  0035-geodesic-distance-kernel.md  0036-index-array-boundary-attribute-model.md  0037-gpu-voronoi-diagram-kernel.md  0038-gpu-byte-classify-geojson-parser.md  0039-provenance-tagging-rewrites.md  0040-tiered-gpu-memory-pool.md  (+8 more)
docs/dev/: agent-runs.md  architecture.md  constructive-result-unification-execution-plan.md  contributing.md  health-metrics-proposal.md  index.md  io-zero-execution-plan.md  kernels.md  native-100ms-physical-shape-plan.md  native-format-inventory.md  native-format-library-plan.md  native-full-coverage-prd.md  precommit.md  private-native-execution-substrate-plan.md  subagents.md  testing.md
docs/ops/: dh-transfer-hitlist.md  intake-index.json  intake.md
docs/testing/: adr0044-rich-baseline-2026-04-25.md  contract-promotion.md  degeneracy-corpus.md  index.md  (+12 more)
examples/: benchmark_florida_csv.py  benchmark_nearby.py  export_florida_formats.py  nearby_buildings.py
scripts/: agent_run.py  bench_compact_gather.py  benchmark_binary_predicates.py  benchmark_bounds_pairs.py  benchmark_cccl_vs_cupy.py  benchmark_clip_rect.py  benchmark_dissolve_pipeline.py  benchmark_gpu_bounds.py  benchmark_gpu_constructive.py  benchmark_gpu_decode.py  benchmark_gpu_dissolve.py  benchmark_gpu_overlay.py  benchmark_gpu_pip.py  benchmark_gpu_predicates.py  benchmark_io_arrow.py  benchmark_io_file.py  benchmark_make_valid.py  benchmark_mixed_layouts.py  benchmark_pipelines.py  benchmark_point_predicates.py  benchmark_report.py  benchmark_segment_filters.py  benchmark_segment_intersections.py  benchmark_segment_primitives.py  benchmark_spatial_query.py  benchmark_stroke_kernels.py  build_intake_index.py  check_architecture_lints.py  check_determinism.py  check_device_function_duplication.py  check_dispatch_once.py  check_docs.py  check_edit_hygiene.py  check_import_guard.py  check_layer_violations.py  check_maintainability.py  check_native_inventory.py  check_perf_patterns.py  check_pipeline_regressions.py  check_zero_copy.py  (+29 more)
tests/: conftest.py  test_adaptive_runtime.py  test_agent_run.py  test_api_surface.py  test_api_testing.py  test_architecture_lints.py  test_bench_operation_args.py  test_bench_shootout.py  test_bench_shootout_io_osm.py  test_benchmark_fixtures.py  test_binary_predicates.py  test_bounds_pairs.py  test_broadcast_constructive.py  test_broadcast_distance.py  test_broadcast_predicates.py  test_cccl_cubin_cache.py  test_cccl_precompile.py  test_cccl_primitives.py  test_centroid_kernels.py  test_check_dispatch_once.py  test_check_zero_copy.py  test_clip_public_api.py  test_clip_rect.py  test_codex_subagents.py  test_contract_promotion.py  test_cpu_only_imports.py  test_csv_gpu.py  test_cudf_pandas_compat.py  test_dbf_gpu.py  test_decision_log.py  test_degeneracy_corpus.py  test_determinism_policy.py  test_device_buffers.py  test_device_geometry_array.py  test_device_guard.py  test_device_take.py  test_disjoint_subset_union_all.py  test_dispatch_equivalence.py  test_dissolve_pipeline.py  test_distance_owned.py  (+130 more)
(+473 files in other folders)
