[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vibespatial"
version = "0.1.0"
description = "GPU-first spatial analytics for Python — drop-in GeoPandas replacement backed by CUDA kernels"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Ben Jarmak", email = "ben@vibespatial.dev" },
]
keywords = [
  "gis",
  "geospatial",
  "gpu",
  "cuda",
  "geopandas",
  "spatial",
  "geometry",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2",
  "orjson>=3.11.7",
  "packaging",
  "pandas>=2.2.0",
  "pyarrow>=14.0",
  "pyogrio>=0.8",
  "pyproj>=3.7.0",
  "shapely>=2.1.0",
  "vibeproj",
]

license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/jarmak-personal/vibeSpatial"
Repository = "https://github.com/jarmak-personal/vibeSpatial"
Documentation = "https://jarmak-personal.github.io/vibeSpatial/"
Issues = "https://github.com/jarmak-personal/vibeSpatial/issues"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pytest-xdist>=3.6",
  "ruff>=0.11",
  "furo>=2024.8",
  "myst-parser>=4",
  "sphinx>=8",
  "sphinx-autodoc2>=0.5",
  "sphinx-copybutton>=0.5",
  "pyarrow>=23.0.1",
]
gpu-optional = [
    "cupy-cuda12x>=13",
    "cuda-cccl[cu12]",
    "nvidia-ml-py>=13.590.48",
    "pylibcudf-cu12>=26.2.1",
]
upstream-optional = [
  "fiona>=1.10",
  "geodatasets",
  "geopy>=2.4",
  "folium>=0.18",
  "mapclassify>=2.8",
  "matplotlib>=3.9",
  "psycopg[binary]>=3.2",
  "pyarrow>=18",
  "pysimdjson>=6.0.0",
  "sqlalchemy>=2.0",
  "xyzservices>=2025.1",
  "fsspec>=2026.2.0",
  "geoarrow-pyarrow>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geopandas", "src/vibespatial"]

[tool.pytest.ini_options]
addopts = ["-ra"]
testpaths = ["tests"]
markers = [
  "upstream: vendored upstream contract tests",
  "gpu: requires a CUDA-capable NVIDIA GPU",
  "cpu_fallback: verifies explicit CPU fallback behavior",
  "web: upstream tests that require network connectivity",
]
xfail_strict = true

[tool.coverage.run]
source = ["src/geopandas", "src/vibespatial"]
omit = ["src/vibespatial/api/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/vibespatial/api", "tests/upstream"]

# For local development with a sibling vibeProj checkout, uncomment:
# [tool.uv.sources]
# vibeproj = { path = "../vibeProj", editable = true }
