[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vibespatial"
version = "0.1.5"
description = "GPU-first spatial analytics for Python — drop-in GeoPandas replacement backed by CUDA kernels"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Ben Jarmak", email = "ben@vibespatial.dev" },
]
keywords = [
  "gis",
  "geospatial",
  "gpu",
  "cuda",
  "geopandas",
  "spatial",
  "geometry",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2",
  "orjson>=3.11.7",
  "packaging",
  "pandas>=2.2.0",
  "pyarrow>=14.0",
  "pyogrio>=0.8",
  "pyproj>=3.7.0",
  "shapely>=2.1.0",
  "vibeproj",
]

license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/jarmak-personal/vibeSpatial"
Repository = "https://github.com/jarmak-personal/vibeSpatial"
Documentation = "https://jarmak-personal.github.io/vibeSpatial/"
Issues = "https://github.com/jarmak-personal/vibeSpatial/issues"

[project.optional-dependencies]
cu12 = [
  "cuda-python>=12,<13",
  "cuda-cccl[cu12]",
  "cupy-cuda12x>=13",
  "nvidia-ml-py>=13.590.48",
  "pylibcudf-cu12>=26.2.1",
]
cu13 = [
  "cuda-python>=13",
  "cuda-cccl[cu13]",
  "cupy-cuda13x>=14",
  "nvidia-ml-py>=13.590.48",
  "pylibcudf-cu13>=26.2.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pytest-xdist>=3.6",
  "ruff>=0.11",
  "furo>=2024.8",
  "myst-parser>=4",
  "sphinx>=8",
  "sphinx-autodoc2>=0.5",
  "sphinx-copybutton>=0.5",
  "pyarrow>=23.0.1",
]
upstream-optional = [
  "fiona>=1.10",
  "geodatasets",
  "geopy>=2.4",
  "folium>=0.18",
  "mapclassify>=2.8",
  "matplotlib>=3.9",
  "psycopg[binary]>=3.2",
  "pyarrow>=18",
  "pysimdjson>=6.0.0",
  "sqlalchemy>=2.0",
  "xyzservices>=2025.1",
  "fsspec>=2026.2.0",
  "geoarrow-pyarrow>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geopandas", "src/vibespatial"]

[tool.pytest.ini_options]
addopts = ["-ra"]
testpaths = ["tests"]
markers = [
  "upstream: vendored upstream contract tests",
  "gpu: requires a CUDA-capable NVIDIA GPU",
  "cpu_fallback: verifies explicit CPU fallback behavior",
  "web: upstream tests that require network connectivity",
]
xfail_strict = true

[tool.coverage.run]
source = ["src/geopandas", "src/vibespatial"]
omit = ["src/vibespatial/api/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/vibespatial/api", "tests/upstream"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade (Python 3.12+)
  "B",     # flake8-bugbear
  "PERF",  # perflint — performance anti-patterns
  "RUF",   # ruff-specific rules
]
ignore = [
  "E501",    # line length managed separately
  "B007",    # unused-loop-control-variable (rename to _ when convenient)
  "B905",    # zip-without-explicit-strict (pervasive, low-risk)
  "PERF401", # manual-list-comprehension (loop+append often clearer than extend)
  "RUF001",  # ambiguous unicode in strings (degree symbols, spatial notation)
  "RUF002",  # ambiguous unicode in docstrings
  "RUF003",  # ambiguous unicode in comments
  "RUF005",  # collection-literal-concatenation (style preference)
  "RUF007",  # zip-instead-of-pairwise (niche)
  "RUF012",  # mutable-class-default (false positives on descriptor patterns)
  "RUF022",  # unsorted-dunder-all (large __all__ lists, sort when convenient)
  "RUF046",  # unnecessary-cast-to-int (noisy in coordinate math)
  "RUF059",  # unused-unpacked-variable (rename to _ when convenient)
  "UP040",   # non-pep695-type-alias (TypeAlias still fine on 3.12)
]

[tool.ruff.lint.isort]
known-first-party = ["vibespatial", "geopandas"]

# For local development with a sibling vibeProj checkout, uncomment:
# [tool.uv.sources]
# vibeproj = { path = "../vibeProj", editable = true }

[tool.uv]
conflicts = [
  [
    { extra = "cu12" },
    { extra = "cu13" },
  ],
]
